<resources>
    <string name="app_name">GaiaXDemo</string>
    <string name="fastpreview">Fast Preview</string>
    <string name="dev_tool_button">DevTool</string>
    <string name="normal_template">Normal Template</string>
    <string name="nest_template">Nest Template</string>
    <string name="container_template">Container Template</string>
    <string name="data">Data Binding</string>
    <string name="event">Event Binding</string>
    <string name="track">Track Binding</string>
    <string name="remote_data_source">Remote Data Source</string>
    <string name="style">Style</string>
    <string name="js">JS</string>
    <string name="page">Page</string>
    <string name="business">Business</string>

    <string name="app_notice">Macrobenchmark Target App.</string>
    <string name="recyclerDescription">A list of items</string>
    <string name="itemOptions">Item options</string>
    <string name="launchLoginActivity">Login</string>
    <string name="launchFullyDrawn">Fully Drawn</string>
    <string name="launchRecyclerActivity">RecyclerView</string>
    <string name="launchListViewActivity">ListView</string>
    <string name="launchScrollViewActivity">ScrollView</string>
    <string name="launchComposeList">Compose LazyList</string>
    <string name="launchNestedRecyclerActivity">Nested RecyclerView</string>
    <string name="launchNestedRecyclerWithPoolsActivity">Nested RecyclerView With Pools</string>
    <string name="js_data">JS Test Activity</string>
    <string name="dev_tools">Open Dev Tools</string>
    <string name="dev_tools_js_log_mode">GaiaXJS Log Mode</string>
    <string name="dev_tools_name">DevTools</string>
    <string name="dev_tools_gaiax_logo">gaiax logo</string>
    <string name="dev_tools_connected_state">未连接</string>
    <string name="dev_tools_scan_gaia_studio">扫码连接到【Gaia Studio】</string>
    <string name="dev_tools_open_fast_preview">打开【实时预览】</string>
    <string name="dev_tools_change_gaiax_js_mode">切换GaiaXJS调试模式</string>
    <string name="dev_tools_close">关闭GaiaX DevTools</string>
    <string name="dev_tools_fold">收起</string>
</resources>
