<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <ImageView
        android:id="@+id/window_gaia_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/gaiax_logo"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dev_tools_gaiax_logo" />

    <TextView
        android:id="@+id/window_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_tools_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/window_btn_connected_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_tools_connected_state"
        android:textColor="@color/viewfinder_text_color"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/window_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/window_btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dev_tools_scan_gaia_studio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/window_btn_fast_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0sp"
        android:text="@string/dev_tools_open_fast_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_btn_scan" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/window_btn_js_debug_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_btn_fast_preview"
        >

        <RadioButton
            android:id="@+id/window_btn_js_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dev_tools_js_log_mode"
            android:textColor="@color/viewfinder_text_color"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/window_title"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/window_btn_js_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev_tools_change_gaiax_js_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/window_btn_fast_preview"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/window_btn_cancel_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_tools_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_btn_js_debug_container"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/window_btn_close_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/dev_tools_fold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_btn_cancel_dev" />




</androidx.constraintlayout.widget.ConstraintLayout>